--- a/app/views/products/_new_products_carousel.html.erb
+++ b/app/views/products/_new_products_carousel.html.erb
@@ -1,6 +1,6 @@
-<h4 href='<%= products_path %>' class='new-products-carousel-header'>
-  <a>New Products</a>
-  <a>See all</a>
+<h4 class='new-products-carousel-header'>
+  <%= link_to 'New Products', products_path %>
+  <%= link_to 'See all', products_path %>
 </h4>
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
   <!-- Wrapper for slides -->
