--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -43,7 +43,7 @@
     </div>
   </div>
   <div class='col-sm-7'>
-    <%= render 'cart/table_listing', cart_items: @cart_items %>
+    <%= render 'cart_items/table_listing', cart_items: @cart_items %>
     <div class='order-subtotal'>
       <span><b>Subtotal</b></span>
       <span class='order-subtotal__value'>
