Fix update password not working

--- a/app/views/users/edit_password.html.erb
+++ b/app/views/users/edit_password.html.erb
@@ -6,8 +6,8 @@
     </div>
     <div class='user-account__right'>
       <div class='field'>
-        <label for='user_old_password'>Old Password</label>
-        <%= f.password_field :old_password %>
+        <label for='user_current_password'>Current Password</label>
+        <%= f.password_field :current_password %>
       </div>
 
       <div class='field'>
