Specify :medium avatar url in user show page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
 
 <p>
   <strong>Avatar:</strong>
-  <%= image_tag @user.avatar.url, size: '150x150'%>
+  <%= image_tag @user.avatar.url(:thumb), size: '150x150'%>
 </p>
 
 <p>
