Remove capitalize from product name in products show page

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -10,7 +10,7 @@
   <% end -%>
 </div>
 <div class='product-description-panel'>
-  <h3 class='product-name'><%= @product.name.capitalize %></h3>
+  <h3 class='product-name'><%= @product.name %></h3>
   <span class='product-sku'><%= @product.sku %></span><br>
   <div class='product-description'><%= @product.description.html_safe %></div>
 </div>
