Refactor params[:per_page] to @per_page in ProductsController

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -4,7 +4,7 @@
       <span>Showing</span>
       <input type='text' name='per_page'
              class='per_page_field'
-             value='<%= params[:per_page] %>' />
+             value='<%= @per_page %>' />
       <span>per page</span>
       <input type='submit' value='update' />
     </form>
